--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -147,7 +147,7 @@
 @define-color expander_row_selected_color #acccee;
 
 @define-color inset_light_color alpha(white, 0.45);
-@define-color inset_dark_color alpha(black, 0.10);
+@define-color inset_dark_color alpha(black, 0.07);
 
 @define-color wm_highlight #ffffff;
 @define-color wm_title_highlight #ffffff;
@@ -175,3 +175,4 @@
 @import url("gnome-applications.css");
 @import url("gtk-widgets.css");
 /* @import url("gtk-widgets-window-unfocused.css"); */
+@import url("gtk-scrollbar-experiments.css");
