--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -9,6 +9,7 @@
 @define-color selected_fg_color #ffffff;
 /*@define-color unfocused_bg_color #f8f8f8;*/
 @define-color unfocused_bg_color @bg_color;
+@define-color placeholder_text_color shade(@text_color, 3.5);
 
 /* Colormap actually used by the theme, to be overridden in other css files */
 @define-color theme_base_color @base_color;
@@ -175,4 +176,4 @@
 @import url("gnome-applications.css");
 @import url("gtk-widgets.css");
 /* @import url("gtk-widgets-window-unfocused.css"); */
-@import url("gtk-scrollbar-experiments.css");
+/* @import url("gtk-scrollbar-experiments.css"); */
