--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -444,7 +444,13 @@ GtkComboBox.combobox-entry .button {
 .primary-toolbar .button:focus,
 .primary-toolbar .button:insensitive {
     border-image: none;
-    border-style: none;
+
+    /* setting border-style: none; here would override the border-width values 
+     * we set in gtk-widget-borders.css to zero.
+     */
+    border-style: solid;
+    border-width: 0;
+    border-color: transparent;
 }
 
 /*.primary-toolbar GtkComboBox .button {
