Widget theme: dark version entry background color tweaks, fixed disabled active buttons on primary toolbars.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -73,8 +73,8 @@
 @define-color entry_text_color #ffffff;
 @define-color entry_background_a #252929;
 @define-color entry_background_b #292d2d;
-@define-color entry_background_c #2d3131;
-@define-color entry_background_d #303434;
+@define-color entry_background_c #2b2f2f;
+@define-color entry_background_d #2d3131;
 
 @define-color frame_color #707070;
 
