engine: remove hack to override color for arrows in GtkMenuItems
GTK+ now properly sets a style class when rendering the arrow, thus we
can remove the override from the C engine.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1051,8 +1051,11 @@ GtkTreeMenu .menuitem * {
 
 .menuitem {
     -GtkMenuItem-arrow-scaling: 0.4;
-    -adwaita-menuitem-arrow-color: @menu_controls_color;
     padding: 4;
+}
+
+.menuitem.arrow {
+    color: @menu_controls_color;
 }
 
 .menuitem:active,
