Widget theme: column headers love.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -107,7 +107,15 @@ GtkComboBox.combobox-entry .button:focus,
 GtkComboBox.combobox-entry .button:active,
 GtkComboBox.combobox-entry .button:hover:active,
 .spinbutton .button:active,
-.spinbutton .button:active:hover {
+.spinbutton .button:active:hover,
+column-header.button:active,
+column-header .button:active,
+column-header.button:active:hover,
+column-header .button:active:hover,
+column-header.button:active:hover:focus,
+column-header .button:active:hover:focus,
+column-header.button:active:focus,
+column-header .button:active:focus {
     background-image: -gtk-gradient(linear,
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.9)),
