--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -122,6 +122,7 @@ column-header.button:hover,
 column-header .button:hover,
 column-header.button:focus,
 column-header .button:focus,
+column-header .button:insensitive,
 column-header.button:focus:hover,
 column-header .button:focus:hover,
 column-header.button:active:focus:hover,
@@ -130,7 +131,12 @@ column-header.button:active:focus,
 column-header .button:active:focus,
 column-header.button:active:hover,
 column-header .button:active:hover {
-    border-image: url("borders/column-header-border.svg") 4 5 4 4 / 4 5 4 4 stretch;
+    border-image: -gtk-gradient (linear,
+                                 left top, left bottom,
+                                 from (@button_border),
+                                 to (@theme_base_color)) 0 1 0 0;
+    border-width: 0 1 0 0;
+    border-radius: 0;
 }
 
 column-header.button:last-child,
@@ -139,6 +145,8 @@ column-header.button:hover:last-child,
 column-header:last-child .button:hover,
 column-header.button:focus:last-child,
 column-header:last-child .button:focus,
+column-header .button:insensitive:last-child,
+column-header:last-child .button:insensitive,
 column-header.button:focus:hover:last-child,
 column-header:last-child .button:focus:hover,
 column-header.button:active:focus:hover:last-child,
@@ -147,5 +155,6 @@ column-header.button:active:focus:last-child,
 column-header:last-child .button:active:focus,
 column-header.button:active:hover:last-child,
 column-header:last-child .button:active:hover {
-    border-image: url("borders/column-header-border-last.svg") 4 / 4 stretch;
+    border-image: none;
+    border-width: 0;
 }
