Widget theme: some borders and backgrounds cleanup, set treeview background to theme_base_color.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -12,6 +12,7 @@
                                      color-stop (0.2, @button_gradient_color_a),
                                      color-stop (0.8, @button_gradient_color_b),
                                      to (@button_gradient_color_b));
+   background-color: none;
 }
 
 /* Pushed button background */
@@ -27,6 +28,7 @@
     				     left top, left bottom,
                                      from (@button_border),
 				     to (alpha(@button_border, 0)));
+    background-color: none; 
 }
 
 /* Flipped pushed button background for vertical progressbar through and the like */
@@ -43,6 +45,7 @@
 .primary-toolbar .button.raised:hover,
 .primary-toolbar .raised .button:hover,
 .primary-toolbar GtkComboBox .button:hover {
+    background-color: none;
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
 				     from (@button_hover_gradient_color_a),
@@ -78,6 +81,7 @@
 .button:active:insensitive,
 .primary-toolbar .button:active:insensitive,
 .primary-toolbar GtkComboBox .button:active:insensitive {
+    background-color: none;
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
 				     from (shade (@insensitive_bg_color, 0.95)),
@@ -116,6 +120,7 @@ column-header.button:active:hover:focus,
 column-header .button:active:hover:focus,
 column-header.button:active:focus,
 column-header .button:active:focus {
+    background-color: none;
     background-image: -gtk-gradient(linear,
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.9)),
@@ -133,6 +138,7 @@ GtkComboBox.combobox-entry .button:insensitive {
 .primary-toolbar .toolbar,
 .primary-toolbar.toolbar,
 .inline-toolbar.toolbar  {
+    background-color: none;
     background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
@@ -145,6 +151,7 @@ GtkComboBox.combobox-entry .button:insensitive {
 /* Active switch background*/
 GtkSwitch.trough:active,
 GtkScale.progressbar {
+    background-color: none;
     background-image: -gtk-gradient (linear,
                                      left top, left bottom,
                                      from (@switch_trough_active_bg_a),
@@ -152,6 +159,7 @@ GtkScale.progressbar {
 }
 
 GtkScale.progressbar.vertical {
+    background-color: none;
     background-image: -gtk-gradient (linear,
                                      left top, right top,
                                      from (@switch_trough_active_bg_a),
