Dark theme: tone down inactive tabs.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -745,7 +745,7 @@ GtkLinkButton * {
     -adwaita-selected-tab-color: @notebook_selected_tab_color;
     background-image: -gtk-gradient (linear,
                                      left top, left bottom,
-                                     from (shade (@theme_base_color, 0.98)),
+                                     from (@button_gradient_color_a),
                                      to (@theme_base_color));
 }
 
