--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -49,8 +49,8 @@
 @define-color notebook_active_tab_border shade (@theme_selected_bg_color, 0.5);
 @define-color notebook_selected_tab_color alpha (@theme_selected_bg_color, 0.75);
 
-@define-color notebook_tab_gradient_a @button_gradient_color_a;
-@define-color notebook_tab_gradient_b @button_gradient_color_b;
+@define-color notebook_tab_gradient_a shade(@theme_bg_color, 0.8);
+@define-color notebook_tab_gradient_b shade(@theme_bg_color, 0.75);
 
 @define-color switch_slider_color shade(@theme_bg_color, 0.9);
 @define-color switch_slider_active_border shade(@switch_trough_active_bg_a, 0.60);
